CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(iculx)

INCLUDE_DIRECTORIES(
    ../common
    ../
)
  
SET(ICULX_SOURCE_FILES
    LXUtilities.cpp
    ParagraphLayout.cpp
    playout.cpp
    plruns.cpp
    RunArrays.cpp
)
SET(ICULX_HEADER_FILES
    LXUtilities.h
    layout/ParagraphLayout.h
    layout/playout.h
    layout/plruns.h
    layout/RunArrays.h
)
SOURCE_GROUP("Source Files" FILES ${ICULX_SOURCE_FILES})
SOURCE_GROUP("Header Files" FILES ${ICULX_HEADER_FILES})

SET_SOURCE_FILES_PROPERTIES(ICULX_HEADER_FILES PROPERTIES HEADER_FILE_ONLY TRUE)
LIST(APPEND ICULX_SOURCE_FILES ${ICULX_HEADER_FILES})
 
ADD_DEFINITIONS(
    -DU_LAYOUTEX_IMPLEMENTATION
)

ADD_LIBRARY(iculx SHARED ${ICULX_SOURCE_FILES})
TARGET_LINK_LIBRARIES(iculx icule icuuc)

INSTALL(TARGETS iculx
        RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
        ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
        LIBRARY DESTINATION "${INSTALL_LIB_DIR}" )
INSTALL(DIRECTORY ${PROJECT_SOURCE_DIR}/layout
        DESTINATION "${INSTALL_INC_DIR}" FILES_MATCHING PATTERN "*.h")
