CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(icudt)

INCLUDE_DIRECTORIES(
    ../common
)
  
SET(ICUDT_SOURCE_FILES stubdata.c)

ADD_DEFINITIONS(
    -DSTUBDATA_BUILD
)

ADD_LIBRARY(icudt SHARED ${ICUDT_SOURCE_FILES} )

INSTALL(TARGETS icudt
        RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
        ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
        LIBRARY DESTINATION "${INSTALL_LIB_DIR}" )
